--- a/src/app/assistance-listing/assistance-listing.page.html
+++ b/src/app/assistance-listing/assistance-listing.page.html
@@ -35,8 +35,7 @@
     </ng-container>
 
     <section id="program-information">
-
-
+      <div class="view-section-margin"></div>
         <div class="usa-grid-full">
           <div class="usa-width-two-thirds">
             <h1><span class="field" id="program-title">{{program?.data?.title}}</span></h1>
@@ -73,9 +72,8 @@
     </section>
 
     <section id="program-overview">
-      <h2></h2>
       <a name="#/programs/{{programID}}/view#overview"></a>
-
+      <div class="view-section-margin"></div>
       <div class="usa-grid-full">
         <div class="usa-width-two-thirds">
           <h2 id="overview">Overview</h2>
