- Restore file changes that were lost somehow

--- a/src/app/authentication/shared/password/password.component.html
+++ b/src/app/authentication/shared/password/password.component.html
@@ -42,19 +42,19 @@
           <ul>
             <li class="header">Passwords must:</li>
             <li>
-              <div class="icon"><span class="fa" [ngClass]="$formState(states.validations.minlength)"></span></div>
+              <div class="icon"><span class="fa" [ngClass]="$formState('minlength')"></span></div>
               <span [innerHTML]="config.messages.minlength"></span>
             </li>
             <li>
-              <div class="icon"><span class="fa" [ngClass]="$formState(states.validations.uppercase)"></span></div>
+              <div class="icon"><span class="fa" [ngClass]="$formState('uppercase')"></span></div>
               <span [innerHTML]="config.messages.uppercase"></span>
             </li>
             <li>
-              <div class="icon"><span class="fa" [ngClass]="$formState(states.validations.numeric)"></span></div>
+              <div class="icon"><span class="fa" [ngClass]="$formState('numeric')"></span></div>
               <span [innerHTML]="config.messages.numeric"></span>
             </li>
             <li>
-              <div class="icon"><span class="fa" [ngClass]="$formState(states.validations.special)"></span></div>
+              <div class="icon"><span class="fa" [ngClass]="$formState('special')"></span></div>
               <span [innerHTML]="config.messages.special"></span>
             </li>
           </ul>
