--- a/src/styles/components/authentication/shared/_password.scss
+++ b/src/styles/components/authentication/shared/_password.scss
@@ -81,13 +81,20 @@
             left: 2px;
             font-size: 2rem;
             line-height: 2.3rem;
+            visibility: hidden;
 
             &.fa-check {
               color: $valid-color;
+              visibility: visible;
             }
 
             &.fa-times {
               color: $invalid-color;
+
+
+              &.ng-touched.ng-dirty {
+                visibility: visible;
+              }
             }
           }
         }
@@ -95,15 +102,9 @@
     }
   }
 
-  .ng-untouched.ng-pristine {
-    .icon {
-      visibility: hidden;
-    }
-  }
-
   .ng-submitted {
     .icon {
-      visibility: visible !important;
+      visibility: visible;
     }
   }
 }
