--- a/src/app/authentication/profile/reset/reset.component.html
+++ b/src/app/authentication/profile/reset/reset.component.html
@@ -5,13 +5,14 @@
 
 <h2 [innerText]="store.title"></h2>
 <div>
-  <form *ngIf="passwordForm" [formGroup]="passwordForm" (ngSubmit)="reset()" class="usa-form-large usa-form-password" autocomplete="off">
+  <form *ngIf="passwordForm" class="usa-form-large usa-form-password" [ngClass]="{ 'ng-submitted': states.submitted }" [formGroup]="passwordForm" (ngSubmit)="reset()" autocomplete="off">
     <div #formControl>
       <sam-password [currentPassword]="passwordForm.controls.currentPassword"
                     [password]="passwordForm.controls.newPassword"
-                    [phrases]="[user.firstName, user.initials, user.lastName, user.email, user.fullName]"></sam-password>
+                    [phrases]="[user.firstName, user.initials, user.lastName, user.email, user.fullName]"
+                    #password></sam-password>
       <div class="usa-button-controls">
-        <button type="submit">Submit</button>
+        <button type="submit" [disabled]="states.loading">Submit</button>
       </div>
     </div>
     <samAlert [type]="states.alert.type"
