CSS Fixes and UIKit Updates for Sam-7452 and Sam-7457

--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -577,14 +577,24 @@
   <div class="usa-grid">
     <h2 class="usa-width-one">Sam Autocomplete Dropdown</h2>
     <div class="usa-width-one-half">
-      <sam-autocomplete-dropdown [(ngModel)]="searchValue1" [name]="searchName1" [options]="dropdownSearch1" [button]="button" (onButtonPressed)="getButton($event)"></sam-autocomplete-dropdown>
+
     </div>
     <div class="usa-width-one-half">
       {{searchValue}}
     </div>
   </div>
 
+  <div class="usa-grid">
+    <h2 class="usa-width-one">MultiSelect Dropdown</h2>
+    <div class="usa-width-one-half">
+      <sam-list-display [newValue]="searchValue1" (emitSelectedItems)="getDropdownListItems($event)" [(ngModel)]="testModel1">
+        <sam-autocomplete-dropdown [(ngModel)]="searchValue1" [name]="searchName1" [options]="dropdownSearch1" [button]="button" (onButtonPressed)="getButton($event)"></sam-autocomplete-dropdown>
+      </sam-list-display>
+    </div>
+    <div class="usa-width-one-half">
+      Model value: {{testModel1}}
+    </div>
+  </div>
 
 
-</div>
 </div>
