--- a/src/styles/components/_autocomplete.scss
+++ b/src/styles/components/_autocomplete.scss
@@ -19,7 +19,7 @@
     position: relative;
     background: $color-white;
 
-    div {
+    li {
       position: relative;
       max-height: 100%;
       overflow: hidden;
