Bug fix - user shouldn't have to click delete twice.
Change formatting of error messages

--- a/src/styles/pages/_grant-access.scss
+++ b/src/styles/pages/_grant-access.scss
@@ -25,4 +25,9 @@
     margin: 0 1em 0 0;
     height: $hit-area;
   }
+
+  .usa-form-hint {
+    display: inline-block;
+    max-width: 46rem;
+  }
 }
