removing history component, switching in sam-history

--- a/src/app/assistance-listing/assistance-listing.page.html
+++ b/src/app/assistance-listing/assistance-listing.page.html
@@ -586,7 +586,7 @@
     <section id="program-history" *ngIf="historicalIndex">
       <a name="#/programs/{{programID}}/view#history"></a>
       <h2 id="history">History</h2><br>
-      <history [data]="history"></history>
+      <sam-history [data]="history"></sam-history>
     </section>
 
     <!--Internal Fields-->
