removed extraneous code

--- a/src/app/search/search.template.html
+++ b/src/app/search/search.template.html
@@ -150,7 +150,7 @@
           <button (click)='wdNonStandardServicesSelectClear()'>Clear</button>
         </sam-collapsible>
         <hr>
-        <button (click)='clearAllFilters(agencyPicker)'>Clear All</button>
+        <button (click)='clearAllFilters()'>Clear All</button>
 
       </sam-filters-container>
     </div>
