--- a/src/styles/components/authentication/profile/_system-details.scss
+++ b/src/styles/components/authentication/profile/_system-details.scss
@@ -3,8 +3,13 @@
     margin-top: 0.5em !important;
   }
 
+  section {
+    margin-top: 1.5em;
+  }
+
   .usa-button-controls {
     max-width: 32rem;
+    margin-top: 1.5em;
 
     button {
       width: 36%;
