OMB navigation bug fix

--- a/src/app/app-components/feedback-form/feedback-form.template.html
+++ b/src/app/app-components/feedback-form/feedback-form.template.html
@@ -68,7 +68,7 @@
       </div>
 
       <div class="usa-width-one-whole m_T-3x text-align-center">
-        <a class="usa-nav-link feedback-form-link" [routerLink]="['/help/policies']"  fragment="OMB" (click)="toggleFeedback()">Form Approved OMB#3090-0297 Exp. Date 07/31/2019</a>
+        <a class="usa-nav-link feedback-form-link"  fragment="OMB" (click)="OnOMBlinkClick()">Form Approved OMB#3090-0297 Exp. Date 07/31/2019</a>
       </div>
 
       <!--Pagination Div-->
