--- a/src/app/role-management/object-details.page.html
+++ b/src/app/role-management/object-details.page.html
@@ -1,4 +1,4 @@
-New Objects
+{{mode === 'edit' ? 'Edit' : 'New' }} Object
 
 <samSelect name='domain' label="Domain"></samSelect>
 <samSelect name='role' label="Role Name"></samSelect>
