--- a/src/app/role-management/role-workspace.page.html
+++ b/src/app/role-management/role-workspace.page.html
@@ -1,2 +1,10 @@
-Roles go here
-<button class="usa-button usa-button-primary" routerLink="new">Create New Role</button>
+
+  <div class = "usa-width-one-fourth" style="padding-top: 5em; padding-right: 4em; padding-left: 3em">
+    <role-sidenav></role-sidenav>
+  </div>
+  <div class = "usa-width-three-fourths" style = "padding-top: 2.4em">
+    <h1>WorkSpace</h1>
+    <h3>Role Definition</h3>
+    <button class="usa-button usa-button-primary" routerLink="new">Create New Role</button>
+
+  </div>
