--- a/src/app/app-components/object-form/object-form.template.html
+++ b/src/app/app-components/object-form/object-form.template.html
@@ -8,17 +8,23 @@
   </aside>
 
   <div class="usa-width-three-fourths">
+
     <form [formGroup] = "mainForm">
 
       <div *ngFor="let item of objectFormData; let i=index;" [id]="item.section" [class.hide]="selectedPage !== i">
         <a [routerLink]="['#' + item.section , {id: i}]" fragment="item.section"></a>
         <div id="stickyLabel" class="sticky-label" *ngIf="i>0 && mode=='edit'">Edit {{item.label}} - {{stickyLabel}}</div>
-        <form-field *ngFor="let field of item.fields; let j=index;"
+        <ng-container *ngFor="let field of item.fields; let j=index;">
+        <form-field
           [field]="field"
           [control]="mainForm.controls[item.section].controls[field.name]"
           [value]="mainForm.get( item.section + '.' + field.name).value"
           [fieldFormGroup] = "mainForm.get(item.section)"
           ></form-field>
+
+        </ng-container>
+
+        <div #dynamicComponent></div>
 
         <div class="pull-left">
           <samButton buttonText="Cancel" (onClick)="onCancelClick($event)"></samButton>
