--- a/src/app/role-management/role-details/role-details.page.html
+++ b/src/app/role-management/role-details/role-details.page.html
@@ -34,8 +34,8 @@
   </div>
   <div class="clearfix">
     <div class="pull-right">
-      <button class="usa-button-outline">Cancel</button>
-      <button class="usa-button-primary">Submit</button>
+      <button class="usa-button-outline" routerLink="/access/roles">Cancel</button>
+      <button class="usa-button-primary" (click)="onSubmitClick()">Submit</button>
     </div>
   </div>
 </div>
