--- a/src/app/role-management/role-sidenav/role-sidenav.template.html
+++ b/src/app/role-management/role-sidenav/role-sidenav.template.html
@@ -1,13 +1,37 @@
-<div>
-  <div class = "pull-left">
-    <h3>Filters</h3>
+<div class="role-sidenav">
+  <div class = "m_T-5em ">
+    <div class = "pull-left">
+      <h3>Filters</h3>
+    </div>
+    <div class = "pull-right filter-icon">
+      <i class="fa fa-sliders fa-2x" aria-hidden="true"></i>
+    </div>
+    <div class = "def-filter">
+      <samAccordion [expandIndex]="0">
+        <samAccordionSection [headerText]="accordionHeading1" [name]="accordionName1">
+          <samRadioButton (modelChange) = "ChangeRoute($event)"
+            [(model)]="path"
+            [options]="radioConfig.options"
+            [label]="radioConfig.label"
+            [hint]="radioConfig.hint"
+            [name]="radioConfig.name"
+            [errorMessage]="radioConfig.errorMessage">
+          </samRadioButton>
+        </samAccordionSection>
+      </samAccordion>
+      <samAccordion [expandIndex]="0">
+        <samAccordionSection [headerText]="accordionHeading2" [name]="accordionName2">
+          <samCheckbox
+            [(model)]="checkboxModel"
+            [name]="checkboxConfig.name"
+            [options]="checkboxConfig.options"
+            [label]="checkboxConfig.label"
+            [hint]="checkboxConfig.hint"
+            [errorMessage]="checkboxConfig.errorMessage"
+            [hasSelectAll]="checkboxConfig.hasSelectAll">
+          </samCheckbox>
+        </samAccordionSection>
+      </samAccordion>
+    </div>
   </div>
-  <div class = "pull-right" style = "padding-top: 1.65em;">
-    <i class="fa fa-sliders fa-2x" aria-hidden="true"></i>
-  </div>
-    <samAccordion>
-      <samAccordionSection headerText="Section title 1" name="aria-friendly-section-name">
-        <a href>A link</a>
-      </samAccordionSection>
-    </samAccordion>
 </div>
