--- a/src/app/role-management/role-workspace.page.html
+++ b/src/app/role-management/role-workspace.page.html
@@ -1,5 +1,5 @@
-
-  <div class = "usa-width-one-fourth" style="padding-top: 5em; padding-right: 4em; padding-left: 3em">
+<div class="role-workspace usa-grid-full">
+  <div class = "usa-width-one-fourth m_W-3em">
     <role-sidenav></role-sidenav>
   </div>
   <div class = "usa-width-three-fourths" style = "padding-top: 2.4em">
@@ -8,3 +8,4 @@
     <button class="usa-button usa-button-primary" routerLink="new">Create New Role</button>
 
   </div>
+</div>
